--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -50,3 +50,9 @@
 .nav > *:hover::before {
   width: 100%;
 }
+
+@media only screen and (max-width: 768px) {
+  .header-container {
+    display: none;
+  }
+}
