Start with the project section

--- a/frontend/src/styles/aboutMe.css
+++ b/frontend/src/styles/aboutMe.css
@@ -1,7 +1,8 @@
 .about-me-container {
   background-color: var(--purple);
   color: var(--white);
-  height: 600px;
+  min-height: 600px;
+  height: max-content;
   display: flex;
   flex-direction: column;
   align-items: center;
